# esp_idf_lvgl_example_1

./: .gitignore  README.md
scripts/: build.sh  clean.sh  colors.sh  flash.sh  fullclean.sh  monitor.sh  settarget.sh  spiffs_partition_build_and_flash.sh
squareline_projects/esp_wifi_demo_1/: eso_wifi_demo_1.sll  eso_wifi_demo_1.spj
src/common/driver/driver_appinfo/: CMakeLists.txt  driver_appinfo.c
src/common/driver/driver_appinfo/include/: driver_appinfo.h
src/common/driver/driver_chipinfo/: CMakeLists.txt  driver_chipinfo.c
src/common/driver/driver_chipinfo/include/: driver_chipinfo.h
src/common/driver/driver_lcd/: CMakeLists.txt  driver_lcd.c
src/common/driver/driver_lcd/include/: driver_lcd.h
src/common/driver/driver_spiffs/: CMakeLists.txt  driver_spiffs.c
src/common/driver/driver_spiffs/include/: driver_spiffs.h
src/common/driver/driver_wifi/: CMakeLists.txt  driver_wifi.c
src/common/driver/driver_wifi/include/: driver_wifi.h
src/common/module/module_wifi/: CMakeLists.txt  module_wifi.c
src/common/module/module_wifi/include/: module_wifi.h
src/common/others/bsp/: CMakeLists.txt
src/common/others/bsp/include/: bsp.h  bsp_lcd.h
src/common/others/defines/: CMakeLists.txt
src/common/others/defines/include/: common_data_types.h  define_common_data_types.h  define_rtos_globals.h  define_rtos_tasks.h  globals.h  tasks_tags.h
src/projects/mainapp/: CMakeLists.txt  sdkconfig  sdkconfig.old
src/projects/mainapp/defines/include/: debug.h
src/projects/mainapp/main/: CMakeLists.txt  main.c
src/projects/mainapp/project_defines/include/: debug.h
src/projects/test_lcd/: CMakeLists.txt  sdkconfig.old
src/projects/test_lcd/main/: CMakeLists.txt
src/projects/test_lcd/project_defines/include/: project_defines.h
src/projects/test_lcd/squareline_project_test_lcd/: eso_wifi_demo_1.sll  eso_wifi_demo_1.spj
src/projects/test_lcd_squareline/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
src/projects/test_lcd_squareline/main/: CMakeLists.txt  main.c
src/projects/test_lcd_squareline/project_ui/: CMakeLists.txt  project_ui.c
src/projects/test_lcd_squareline/project_ui/include/: project_ui.h
src/projects/test_lcd_squareline/squareline_project_test_lcd/: squareline_project_test_lcd.sll  squareline_project_test_lcd.spj
src/projects/test_lcd_squareline/squareline_project_test_lcd/export/ui/: CMakeLists.txt  CMakeLists_backup.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/projects/test_lcd_squareline/squareline_project_test_lcd/export/ui/components/: ui_comp_hook.c
src/projects/test_lcd_squareline/squareline_project_test_lcd/export/ui/images/: ui_img_logo_frame_00_png.c  ui_img_logo_frame_01_png.c  ui_img_logo_frame_02_png.c  ui_img_logo_frame_03_png.c  ui_img_logo_frame_04_png.c  ui_img_logo_frame_05_png.c  ui_img_logo_frame_06_png.c  ui_img_logo_frame_07_png.c  ui_img_logo_frame_08_png.c  ui_img_logo_frame_09_png.c  ui_img_logo_frame_10_png.c  ui_img_logo_frame_11_png.c  ui_img_logo_frame_12_png.c  ui_img_logo_frame_13_png.c  ui_img_logo_frame_14_png.c  ui_img_logo_frame_15_png.c  ui_img_logo_frame_16_png.c  ui_img_logo_frame_17_png.c  ui_img_logo_frame_18_png.c  ui_img_logo_frame_19_png.c  ui_img_logo_frame_20_png.c  ui_img_logo_frame_21_png.c  ui_img_logo_frame_22_png.c  ui_img_logo_frame_23_png.c  ui_img_logo_frame_24_png.c  ui_img_logo_frame_25_png.c  ui_img_logo_frame_26_png.c  ui_img_logo_frame_27_png.c  ui_img_logo_frame_28_png.c  ui_img_logo_frame_29_png.c  ui_img_logo_frame_30_png.c  ui_img_logo_frame_31_png.c  ui_img_logo_frame_32_png.c  ui_img_logo_frame_33_png.c  ui_img_logo_frame_34_png.c  ui_img_logo_frame_35_png.c  ui_img_logo_frame_36_png.c  ui_img_logo_frame_37_png.c  ui_img_logo_frame_38_png.c  ui_img_logo_frame_39_png.c  (+19 more)
src/projects/test_lcd_squareline/squareline_project_test_lcd/export/ui/screens/: ui_screen1.c  ui_screen1.h
src/projects/test_wifi/: CMakeLists.txt  sdkconfig  sdkconfig.old
src/projects/test_wifi/main/: CMakeLists.txt  main.c
src/spiffs_fs/: hw_info.txt
uml/: driver_wifi.plantuml  module_wifi.plantuml
(+2 files in other folders)
